--- a/TestCollectionView3/Base.lproj/Main.storyboard
+++ b/TestCollectionView3/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="139" id="6vg-3H-FBb"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6pS-Rx-OMn">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6pS-Rx-OMn">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -121,15 +121,44 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7GB-qt-yeF">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7GB-qt-yeF">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Monnday 5:30 - 6:30 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EY-Rh-ike">
+                                                    <rect key="frame" x="20" y="92.5" width="98" height="15.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMZ-S7-KIt">
+                                                    <rect key="frame" x="20" y="67.5" width="98" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="OMZ-S7-KIt" secondAttribute="height" multiplier="23:9" constant="31.333333333333343" id="I1Y-MK-AYT"/>
+                                                        <constraint firstAttribute="height" constant="30" id="MAl-o7-h4E"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5EY-Rh-ike" firstAttribute="top" secondItem="OMZ-S7-KIt" secondAttribute="bottom" constant="-5" id="20K-Dq-QaM"/>
+                                                <constraint firstItem="5EY-Rh-ike" firstAttribute="leading" secondItem="y1Y-2Y-S75" secondAttribute="leading" constant="20" id="OmT-ab-UQp"/>
+                                                <constraint firstAttribute="trailing" secondItem="5EY-Rh-ike" secondAttribute="trailing" constant="10" id="RaR-W7-Kg2"/>
+                                                <constraint firstAttribute="trailing" secondItem="OMZ-S7-KIt" secondAttribute="trailing" constant="10" id="V0I-i8-BqX"/>
+                                                <constraint firstItem="OMZ-S7-KIt" firstAttribute="leading" secondItem="y1Y-2Y-S75" secondAttribute="leading" constant="20" id="XBp-cy-LW4"/>
+                                                <constraint firstAttribute="bottom" secondItem="7GB-qt-yeF" secondAttribute="bottom" id="cYd-f5-1HA"/>
+                                                <constraint firstItem="7GB-qt-yeF" firstAttribute="top" secondItem="y1Y-2Y-S75" secondAttribute="top" id="eF5-ml-AK2"/>
+                                                <constraint firstAttribute="bottom" secondItem="5EY-Rh-ike" secondAttribute="bottom" constant="20" id="qmd-to-QhP"/>
+                                                <constraint firstItem="7GB-qt-yeF" firstAttribute="leading" secondItem="y1Y-2Y-S75" secondAttribute="leading" id="sCa-LD-Pua"/>
+                                                <constraint firstAttribute="trailing" secondItem="7GB-qt-yeF" secondAttribute="trailing" id="sbt-RW-pzp"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="128" height="128"/>
                                         <connections>
                                             <outlet property="image1" destination="7GB-qt-yeF" id="NJ5-cr-hdT"/>
+                                            <outlet property="labelImage" destination="OMZ-S7-KIt" id="i7d-AS-zHu"/>
+                                            <outlet property="labelSubheader" destination="5EY-Rh-ike" id="8vT-0a-XWM"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -140,7 +169,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="LGQ-Sz-KU8"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="5" minimumInteritemSpacing="5" id="UdT-Xr-wvi">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="5" id="UdT-Xr-wvi">
                                     <size key="itemSize" width="192" height="95"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -154,11 +183,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="192" height="95"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d06-tB-38z">
-                                                    <rect key="frame" x="0.0" y="0.0" width="83" height="87"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d06-tB-38z">
+                                                    <rect key="frame" x="0.0" y="0.0" width="192" height="95"/>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="d06-tB-38z" secondAttribute="trailing" id="VTL-dw-BBK"/>
+                                                <constraint firstAttribute="bottom" secondItem="d06-tB-38z" secondAttribute="bottom" id="ZLs-2P-XTz"/>
+                                                <constraint firstItem="d06-tB-38z" firstAttribute="leading" secondItem="QeJ-92-dbz" secondAttribute="leading" id="pEG-EB-CGh"/>
+                                                <constraint firstItem="d06-tB-38z" firstAttribute="top" secondItem="QeJ-92-dbz" secondAttribute="top" id="pOR-XC-B3O"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="192" height="95"/>
                                         <connections>
